RESOLVED FIXED 32226
Random crashes in WebSocket tests on Leopard Debug
https://bugs.webkit.org/show_bug.cgi?id=32226
Summary Random crashes in WebSocket tests on Leopard Debug
Nikolas Zimmermann
Reported 2009-12-07 09:18:19 PST
See Leopard Intel Debug slave, the new test in websocket/tests/url-with-credential.html crashes. Adding to the skipped list, until anyone resolves it.
Attachments
proposed fix (1.38 KB, patch)
2009-12-07 12:56 PST, Alexey Proskuryakov
zimmermann: review+
Alexey Proskuryakov
Comment 1 2009-12-07 10:56:47 PST
Disabling the test didn't help - now the next test fails, so it's one of earlier tests that is to blame. Investigating.
Alexey Proskuryakov
Comment 2 2009-12-07 11:12:34 PST
Un-skipped the test. Running 'run-webkit-tests websocket --repeat-each 5 -v' locally, I'm getting a crash in websocket/tests/handshake-error.html, which looks like memory corruption. Thread 0 Crashed: 0 com.apple.CoreFoundation 0x94b7fde6 CFEqual + 38 1 com.apple.CoreFoundation 0x94b81835 __CFSetFindBuckets2 + 293 2 com.apple.CoreFoundation 0x94b82be8 CFSetAddValue + 360 3 com.apple.CoreFoundation 0x94b7c07e CFRunLoopAddTimer + 478 4 com.apple.WebCore 0x04c65929 WebCore::setSharedTimerFireTime(double) + 291 (SharedTimerMac.mm:103) 5 com.apple.WebCore 0x04daa5a5 WebCore::MainThreadSharedTimer::setFireTime(double) + 33 (SharedTimer.h:65) 6 com.apple.WebCore 0x04daa09d WebCore::ThreadTimers::updateSharedTimer() + 141 (ThreadTimers.cpp:85) 7 com.apple.WebCore 0x04daa23b WebCore::ThreadTimers::sharedTimerFiredInternal() + 381 (ThreadTimers.cpp:122) 8 com.apple.WebCore 0x04daa2ef WebCore::ThreadTimers::sharedTimerFired() + 27 (ThreadTimers.cpp:91) 9 com.apple.WebCore 0x04c657b0 __ZN7WebCoreL10timerFiredEP16__CFRunLoopTimerPv + 78 (SharedTimerMac.mm:87) 10 com.apple.CoreFoundation 0x94b7d8f5 CFRunLoopRunSpecific + 4469
Alexey Proskuryakov
Comment 3 2009-12-07 12:56:40 PST
Created attachment 44426 [details] proposed fix
WebKit Review Bot
Comment 4 2009-12-07 13:00:25 PST
style-queue ran check-webkit-style on attachment 44426 [details] without any errors.
Nikolas Zimmermann
Comment 5 2009-12-07 13:04:36 PST
Comment on attachment 44426 [details] proposed fix Looks good. r=me.
Alexey Proskuryakov
Comment 6 2009-12-07 13:06:04 PST
Committed revision 51790.
Note You need to log in before you can comment on or make changes to this bug.