        Reviewed by Nikolas Zimmermann.

https://bugs.webkit.org/show_bug.cgi?id=32226
        Random crashes in WebSocket tests on Leopard Debug builbot

        * platform/network/SocketStreamHandleBase.cpp: (WebCore::SocketStreamHandleBase::close):
        Make sure the object still exists when setting m_state.



git-svn-id: svn://svn.chromium.org/blink/trunk@51790 bbb929c8-8fbe-4397-9dbb-9b2b20218538